# Prototyping-Python

./: .gitignore  README.md  pyproject.toml
docs/source/: conf.py  index.rst
protopy/: html.txt  profiler.py
protopy/dynamodb/: runner.py
protopy/egradani_parser/: runner.py
protopy/egradani_parser/data/: egradani-dostupne.html  egradani-ostale.html
protopy/excel/: runner.py
protopy/graph_analysis/: analyzer.py
protopy/inspiration_generator/: data.py
protopy/interface/: runner.py
protopy/nlp/: runner.py
protopy/parse/: runner.py
protopy/parse/data/: web.html
protopy/pdf/: runner.py
protopy/vassal_engine/: runner.py
protopy/vassal_engine/data/: 2020-06-vassal-players-month.txt  2021-03-vassal-players-month.txt
tests/: context.py  test_poetry_template.py
tests/graph_analysis/: test_module_one.py
tests/graph_analysis/data/: arc-jove-null-jumps.csv  system-id-to-name.csv
