[tool.poetry]
name = "protopy"
version = "0.1.0"
description = "Python prototyping sandbox."

license = "MIT"
authors = ["Mislav Jaksic <jaksicmislav@gmail.com>"]
maintainers = []
readme = "README.md"

homepage = "https://github.com/MislavJaksic/Prototyping-Python"
repository = "https://github.com/MislavJaksic/Prototyping-Python"
documentation = "https://github.com/MislavJaksic/Prototyping-Python"

keywords = []

classifiers = []

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.30.0"
rapdevpy = "^1.0.0"
beautifulsoup4 = "^4.12.2"
spacy = "^3.5.2"
datasette = "^0.64.3"
sqlite-utils = "^3.31"
pypdf2 = "^3.0.1"

[tool.poetry.dev-dependencies]
pytest-cov = "^4.0.0"
black = "^23.3.0"
pytest = "^7.3.1"
sphinx = "^7.0.0"

[tool.poetry.scripts]
protopy = "protopy.runner:run"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
